--- a/index.html
+++ b/index.html
@@ -185,10 +185,14 @@
         <div class="modal-content">
           <div class="modal-header">
             <button type="button" class="close" data-dismiss="modal"><span>×</span></button>
-            <h4 id="record-work-title" class="modal-title"></h4>
+            <h4 class="modal-title">
+              <a id="record-work-link" target="_blank" href=""></a>
+            </h4>
             <h5 class="modal-title">
-              <span id="record-episode-number"></span>
-              <span id="record-episode-title"></span>
+              <a id="record-episode-link" target="_blank" href="">
+                <span id="record-episode-number"></span>
+                <span id="record-episode-title"></span>
+              </a>
             </h5>
           </div>
           <div class="modal-body">
@@ -219,7 +223,9 @@
         <div class="modal-content">
           <div class="modal-header">
             <button type="button" class="close" data-dismiss="modal"><span>×</span></button>
-            <h4 id="review-work-title" class="modal-title"></h4>
+            <h4 class="modal-title">
+              <a id="review-work-link" target="_blank" href=""></a>
+            </h4>
           </div>
           <div class="modal-body">
             <div class="form-group">
