--- a/index.html
+++ b/index.html
@@ -280,7 +280,9 @@
         <div class="modal-content">
           <div class="modal-header">
             <button type="button" class="close" data-dismiss="modal"><span>×</span></button>
-            <h4 id="status-modal-title" class="modal-title"></h4>
+            <h4 class="modal-title">
+              <a id="status-work-link" target="_blank" href=""></a>
+            </h4>
           </div>
           <div class="modal-body">
             <p>
