--- a/index.html
+++ b/index.html
@@ -152,7 +152,7 @@
             <h4 class="modal-title">アクセストークンを入力してください。</h4>
             <input type="text" class="form-control" id="token" placeholder="">
             <span class="help-block">
-              ※アクセストークンを生成していない場合は <a href="https://developers.annict.jp/graphql-api/personal-access-token/#トークンを生成する" target="_blank">こちら</a> を参考にしてください。
+              ※アクセストークンを生成していない場合は <a href="https://developers.annict.com/docs/authentication/personal-access-token" target="_blank">こちら</a> を参考にしてください。
             </span>
           </div>
           <div class="modal-body">
